Fix DCHECK firing in PaintedOverlayScrollbarLayerImpl

This DCHECK can trip if the window is resized to sizes smaller than the 9-patch
border size. In these cases, trying to draw a <4 pixel scrollbar seems
pointless so this patch makes it so that we just avoid drawing it at all in the
degenerate case.

We were also triping the DCHECK when we tried to paint the scrollbar before
we've set its properties so we add an early out as well.

BUG=698552
CQ_INCLUDE_TRYBOTS=master.tryserver.blink:linux_trusty_blink_rel

Review-Url: https://codereview.chromium.org/2731423002
Cr-Commit-Position: refs/heads/master@{#455092}

Former-commit-id: 3c60ed4047b120940639e33fc3c391966f865404